--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.507.0",
+    "aws-amplify": "^6.0.15",
+    "aws-sdk": "^2.1552.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
